--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -1,7 +1,7 @@
 .header{
 	background: $main-color;
 	padding: 25px 0;
-    position: relative;
+  position: relative;
     .headerContent{
     // max-width: 90%;
     // padding: 0 12px;
@@ -29,12 +29,12 @@
         display: none;
         }
         >li{
-        width: 20%;
+        // width: 20%;
         }
         a{
         color: #fff;
         font: normal normal normal 20px/30px Source Han Sans TW;
-        padding: 5%;
+        padding: 5% 0;
         }
     }
     }
@@ -44,7 +44,7 @@
 .hamburger{
   display: none;
   position: absolute;
-  top: 3%;
+  top: 25px;
   right: 5%;
   font-size: 40px;
   color:#fff;
