--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -7,7 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title><%- title %></title>
-
+  <link
+  href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,900&display=swap"
+  rel="stylesheet">
   <link rel="stylesheet" href="./assets/style/all.css">
 </head>
 
