--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -68,6 +68,22 @@ a {
   display: block;
 }
 
+.container {
+  max-width: 1320px;
+  margin: 0 auto;
+  padding: 0 12px;
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 698px;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    max-width: 372px;
+  }
+}
+
 .header {
   background: #AA0601;
   padding: 25px 0;
@@ -309,12 +325,17 @@ a {
 
 .banner {
   height: 787px;
-  background: url(../images/week3-4/home-header.png);
+  background: url(../images/week3-4/home-header.png) 50% 50%;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
 }
 @media (max-width: 767px) {
   .banner {
-    background: url(../images/week3-4/home-header-sm.png) no-repeat;
+    height: 396px;
+    background: url(../images/week3-4/home-header-sm.png) no-repeat 50% 50%;
     background-size: cover;
   }
 }
@@ -322,6 +343,7 @@ a {
   max-width: 1320px;
   margin: 0 auto;
   padding: 0 12px;
+  width: 100%;
   text-align: right;
   display: flex;
   flex-direction: column;
@@ -578,7 +600,8 @@ a {
   flex-direction: column;
   justify-content: space-between;
   text-align: left;
-  box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1607843137);
+  border-radius: 4px 5px 0px 0px;
 }
 @media (max-width: 992px) {
   .customer .customerContent .list {
@@ -589,7 +612,7 @@ a {
 @media (max-width: 767px) {
   .customer .customerContent .list {
     width: 100%;
-    margin-bottom: 3%;
+    margin-bottom: 16px;
     align-items: center;
   }
 }
@@ -660,8 +683,13 @@ a {
   margin-bottom: 16px;
 }
 .contact .contactContent form .agree {
+  display: flex;
+  align-items: start;
   font: normal normal normal 16px/24px Source Han Sans TW;
   margin-bottom: 48px;
+}
+.contact .contactContent form .agree input {
+  margin-right: 4px;
 }
 .contact .contactContent form .send input {
   width: 70%;
@@ -680,5 +708,172 @@ a {
 @media (max-width: 767px) {
   .contact .contactContent form .send input {
     width: 100%;
+  }
+}
+
+.topNav {
+  max-width: 1320px;
+  margin: 0 auto;
+  padding: 0 12px;
+  display: flex;
+  text-align: center;
+}
+@media (max-width: 992px) {
+  .topNav {
+    max-width: 698px;
+  }
+}
+@media (max-width: 767px) {
+  .topNav {
+    max-width: 90%;
+  }
+}
+@media (max-width: 992px) {
+  .topNav {
+    max-width: 100%;
+    padding: 0;
+  }
+}
+@media (max-width: 767px) {
+  .topNav {
+    max-width: 100%;
+    padding: 0;
+  }
+}
+.topNav .optical {
+  border-bottom: 8px solid #AA0601;
+}
+.topNav li {
+  width: 33.33%;
+  padding: 24px 0;
+  font-size: 32px;
+  font-weight: 500;
+}
+@media (max-width: 992px) {
+  .topNav li {
+    padding: 16px 0;
+    font-size: 24px;
+  }
+}
+@media (max-width: 767px) {
+  .topNav li {
+    padding: 16px 0;
+    font-size: 16px;
+  }
+}
+.topNav li a {
+  display: block;
+  color: #000;
+}
+
+.opticalBanner {
+  display: flex;
+}
+
+.opticalMain {
+  text-align: center;
+  margin: 80px 0;
+}
+@media (max-width: 767px) {
+  .opticalMain {
+    margin: 40px 0 64px;
+  }
+}
+.opticalMain h2 {
+  font-size: 42px;
+  font-weight: 500;
+}
+.opticalMain h3 {
+  font-size: 32px;
+  font-weight: 400;
+}
+.opticalMain .product {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 32px;
+}
+@media (max-width: 767px) {
+  .opticalMain .product {
+    margin: 24px 0 40px;
+  }
+}
+.opticalMain .product li {
+  width: 23%;
+  margin-bottom: 80px;
+}
+@media (max-width: 992px) {
+  .opticalMain .product li {
+    width: 48%;
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .opticalMain .product li {
+    width: 100%;
+    margin-bottom: 24px;
+  }
+}
+.opticalMain .product .namePrice {
+  display: flex;
+  justify-content: space-between;
+}
+.opticalMain .product h4 {
+  font-size: 24px;
+  font-weight: 400;
+}
+.opticalMain .product p {
+  font-size: 24px;
+  font-weight: 500;
+  color: #AA0601;
+}
+.opticalMain .product .color {
+  display: flex;
+}
+.opticalMain .product .color .color1 {
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+  border-radius: 4px;
+  background-color: #5F3E2D;
+}
+.opticalMain .product .color .color2 {
+  width: 24px;
+  height: 24px;
+  border-radius: 4px;
+  background-color: #B75929;
+}
+.opticalMain .page {
+  display: flex;
+  justify-content: center;
+}
+.opticalMain .page .next {
+  padding: 11px 12px;
+  font-size: 19px;
+  color: #555555;
+  border: 1px solid #555555;
+}
+.opticalMain .page .next:hover {
+  background-color: #000;
+  color: #fff;
+}
+@media (max-width: 767px) {
+  .opticalMain .page .next {
+    font-size: 16px;
+  }
+}
+.opticalMain .page .number {
+  padding: 12px 15px;
+  font-size: 18px;
+  color: #555555;
+  border: 1px solid #555555;
+}
+.opticalMain .page .number:hover {
+  background-color: #000;
+  color: #fff;
+}
+@media (max-width: 767px) {
+  .opticalMain .page .number {
+    font-size: 16px;
   }
 }/*# sourceMappingURL=all.css.map */
