--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -1,19 +1,21 @@
 .banner{
     height: 787px;
-    background: url(../images/week3-4/home-header.png);
+    background: url(../images/week3-4/home-header.png) 50% 50%;
     background-size: cover;
-    // display: flex; 
-    // // flex-direction: column;
-    // justify-content: end;
-    // align-items:center;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items:flex-end;
     // position: relative;
     @include iphone{
-      background: url(../images/week3-4/home-header-sm.png) no-repeat;
+      height: 396px;
+      background: url(../images/week3-4/home-header-sm.png) no-repeat 50% 50%;
       background-size: cover;
     }
     .bannerContent{
       // max-width: 600px;
       @include content-style;
+      width: 100%;
       text-align:right;
       // // margin-right: 15%;
       // position: absolute;
@@ -194,14 +196,15 @@
         justify-content: space-between;
         // align-items: flex-start;
         text-align: left;
-        box-shadow: 2px 2px 3px 1px rgba(0,0,0,0.3);
+        box-shadow: 0px 2px 6px #00000029;
+        border-radius: 4px 5px 0px 0px;
         @include ipad{
           width: 47%;
           margin-bottom: 3%;
         }
         @include iphone{
           width: 100%;
-          margin-bottom: 3%;
+          margin-bottom: 16px;
           align-items: center;
         }
         h4{
@@ -267,8 +270,13 @@
           margin-bottom: 16px;
         }
         .agree{
+          display: flex;
+          align-items: start;
           font: normal normal normal 16px/24px Source Han Sans TW;
           margin-bottom: 48px;
+          input{
+            margin-right: 4px;
+          }
         }
         .send{
           input{
