--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -740,12 +740,11 @@ a {
     padding: 0;
   }
 }
-.topNav .optical {
+.topNav .navBottom {
   border-bottom: 8px solid #AA0601;
 }
 .topNav li {
   width: 33.33%;
-  padding: 24px 0;
   font-size: 32px;
   font-weight: 500;
 }
@@ -763,6 +762,7 @@ a {
 }
 .topNav li a {
   display: block;
+  padding: 24px 0;
   color: #000;
 }
 
@@ -876,4 +876,355 @@ a {
   .opticalMain .page .number {
     font-size: 16px;
   }
+}
+
+.sunglassesMain {
+  text-align: center;
+  margin: 80px 0;
+}
+@media (max-width: 767px) {
+  .sunglassesMain {
+    margin: 40px 0 64px;
+  }
+}
+.sunglassesMain h2 {
+  font-size: 42px;
+  font-weight: 500;
+}
+.sunglassesMain h3 {
+  font-size: 32px;
+  font-weight: 400;
+}
+.sunglassesMain .product {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 32px;
+}
+@media (max-width: 767px) {
+  .sunglassesMain .product {
+    margin: 24px 0 40px;
+  }
+}
+.sunglassesMain .product li {
+  width: 32%;
+  margin-bottom: 80px;
+}
+@media (max-width: 992px) {
+  .sunglassesMain .product li {
+    width: 48%;
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .sunglassesMain .product li {
+    width: 100%;
+    margin-bottom: 24px;
+  }
+}
+.sunglassesMain .product .namePrice {
+  display: flex;
+  justify-content: space-between;
+}
+.sunglassesMain .product h4 {
+  font-size: 24px;
+  font-weight: 400;
+}
+.sunglassesMain .product p {
+  font-size: 24px;
+  font-weight: 500;
+  color: #AA0601;
+}
+.sunglassesMain .product .color {
+  display: flex;
+}
+.sunglassesMain .product .color .color1 {
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
+  border-radius: 4px;
+  background-color: #5F3E2D;
+}
+.sunglassesMain .product .color .color2 {
+  width: 24px;
+  height: 24px;
+  border-radius: 4px;
+  background-color: #B75929;
+}
+.sunglassesMain .page {
+  display: flex;
+  justify-content: center;
+}
+.sunglassesMain .page .next {
+  padding: 11px 12px;
+  font-size: 19px;
+  color: #555555;
+  border: 1px solid #555555;
+}
+.sunglassesMain .page .next:hover {
+  background-color: #000;
+  color: #fff;
+}
+@media (max-width: 767px) {
+  .sunglassesMain .page .next {
+    font-size: 16px;
+    padding: 10px;
+  }
+}
+.sunglassesMain .page .number {
+  padding: 12px 15px;
+  font-size: 18px;
+  color: #555555;
+  border: 1px solid #555555;
+}
+.sunglassesMain .page .number:hover {
+  background-color: #000;
+  color: #fff;
+}
+@media (max-width: 767px) {
+  .sunglassesMain .page .number {
+    font-size: 16px;
+  }
+}
+
+.locationMain {
+  margin: 96px 0 32px;
+}
+@media (max-width: 992px) {
+  .locationMain {
+    margin: 80px 0 56px;
+  }
+}
+@media (max-width: 767px) {
+  .locationMain {
+    margin: 40px 0 56px;
+  }
+}
+.locationMain h2 {
+  font-size: 48px;
+  font-weight: 700;
+  padding-left: 16px;
+  margin-bottom: 32px;
+  border-left: 8px solid #9F1213;
+}
+@media (max-width: 767px) {
+  .locationMain h2 {
+    font-size: 24px;
+    margin-bottom: 24px;
+  }
+}
+.locationMain label {
+  font-size: 24px;
+  margin-right: 16px;
+}
+@media (max-width: 767px) {
+  .locationMain label {
+    font-size: 16px;
+    margin-right: 8px;
+  }
+}
+.locationMain select {
+  padding: 6px 230px 6px 12px;
+  margin-bottom: 40px;
+  font-size: 18px;
+  border: 1px solid #CED4DA;
+}
+@media (max-width: 767px) {
+  .locationMain select {
+    padding: 6px 180px 6px 12px;
+    margin-bottom: 24px;
+  }
+}
+.locationMain .shop {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -12px;
+}
+.locationMain .shop > li {
+  width: 33.33%;
+  padding: 0 12px;
+  margin-bottom: 48px;
+  color: #212529;
+}
+@media (max-width: 992px) {
+  .locationMain .shop > li {
+    width: 50%;
+    margin-bottom: 24px;
+  }
+}
+@media (max-width: 767px) {
+  .locationMain .shop > li {
+    width: 100%;
+  }
+}
+.locationMain .shop h3 {
+  font-size: 24px;
+  padding: 8px 0 8px 16px;
+  border: 1px solid rgba(0, 0, 0, 0.1254901961);
+}
+.locationMain .shop a {
+  background-color: #000;
+  color: #fff;
+  font-size: 19px;
+  padding: 16px 0;
+  text-align: center;
+}
+.locationMain .shop a:hover {
+  opacity: 0.7;
+}
+.locationMain .shopContact {
+  padding: 16px 24px 8px;
+  border: 1px solid rgba(0, 0, 0, 0.1254901961);
+}
+.locationMain .shopContact li {
+  font-size: 20px;
+  margin-bottom: 8px;
+}
+.locationMain .shopContact i {
+  width: 24px;
+  height: 24px;
+  font-size: 24px;
+  text-align: center;
+  margin-right: 8px;
+}
+
+.mapMain {
+  margin: 96px 0 80px;
+}
+@media (max-width: 992px) {
+  .mapMain {
+    margin: 80px 0 56px;
+  }
+}
+@media (max-width: 767px) {
+  .mapMain {
+    margin: 40px 0;
+  }
+}
+.mapMain h2 {
+  font-size: 48px;
+  font-weight: 700;
+  padding-left: 16px;
+  margin-bottom: 32px;
+  border-left: 8px solid #9F1213;
+}
+@media (max-width: 767px) {
+  .mapMain h2 {
+    font-size: 24px;
+    margin-bottom: 24px;
+  }
+}
+.mapMain label {
+  font-size: 24px;
+  margin-right: 16px;
+}
+@media (max-width: 767px) {
+  .mapMain label {
+    font-size: 16px;
+    margin-right: 8px;
+  }
+}
+.mapMain select {
+  padding: 6px 230px 6px 12px;
+  margin-bottom: 40px;
+  font-size: 18px;
+  border: 1px solid #CED4DA;
+}
+@media (max-width: 767px) {
+  .mapMain select {
+    padding: 6px 180px 6px 12px;
+    margin-bottom: 24px;
+  }
+}
+.mapMain .map {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -12px;
+}
+.mapMain .map .shopImf {
+  width: 41.66%;
+  padding: 0 12px;
+  color: #212529;
+}
+@media (max-width: 992px) {
+  .mapMain .map .shopImf {
+    width: 100%;
+    margin-bottom: 24px;
+  }
+}
+.mapMain .map .shopMap {
+  width: 58.33%;
+  padding: 0 12px;
+}
+@media (max-width: 992px) {
+  .mapMain .map .shopMap {
+    width: 100%;
+    margin-bottom: 24px;
+  }
+}
+.mapMain .map .shopMap img {
+  height: 414px;
+}
+@media (max-width: 767px) {
+  .mapMain .map .shopMap img {
+    height: 208px;
+  }
+}
+.mapMain .map h3 {
+  font-size: 24px;
+  padding: 8px 0 8px 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1254901961);
+}
+@media (max-width: 992px) {
+  .mapMain .map .ipadContent {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -12px;
+  }
+}
+@media (max-width: 767px) {
+  .mapMain .map .ipadContent {
+    flex-direction: column;
+  }
+}
+@media (max-width: 992px) {
+  .mapMain .map .ipadContent img {
+    width: 50%;
+    padding: 0 12px;
+  }
+}
+@media (max-width: 767px) {
+  .mapMain .map .ipadContent img {
+    width: 100%;
+  }
+}
+@media (max-width: 992px) {
+  .mapMain .map .ipadContent .ipadRwd {
+    width: 50%;
+    padding: 0 12px;
+  }
+}
+@media (max-width: 767px) {
+  .mapMain .map .ipadContent .ipadRwd {
+    width: 100%;
+  }
+}
+.mapMain .shopContact {
+  padding: 16px 24px 16px;
+  border: 1px solid rgba(0, 0, 0, 0.1254901961);
+}
+.mapMain .shopContact li {
+  font-size: 20px;
+  margin-bottom: 8px;
+}
+.mapMain .shopContact i {
+  width: 24px;
+  height: 24px;
+  font-size: 24px;
+  text-align: center;
+  margin-right: 8px;
+}
+
+* {
+  outline: 1px solid black;
 }/*# sourceMappingURL=all.css.map */
