--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -6,10 +6,13 @@
 @import 'layout';
 @import 'index';
 @import 'optical';
+@import 'sunglasses';
+@import 'location';
+@import 'map';
 
-// *{
-// 	outline: 1px solid black;
-// }
+*{
+	outline: 1px solid black;
+}
 
 
 
