--- a/app/assets/style/_sunglasses.scss
+++ b/app/assets/style/_sunglasses.scss
@@ -1,43 +1,5 @@
-.topNav{
-    @include content-style;
-    display: flex;
-    text-align: center;
-    @include ipad{
-        max-width: 100%;
-        padding: 0;
-    }
-    @include iphone{
-        max-width: 100%;
-        padding: 0;
-    }
-    .navBottom{
-        border-bottom: 8px solid $main-color;
-    }
-    li{
-        width: 33.33%;
-        font-size: 32px;
-        font-weight: 500;
-        @include ipad{
-            padding: $space*4 0;
-            font-size: 24px;
-        }
-        @include iphone{
-            padding: $space*4 0;
-            font-size: 16px;
-        }
-        a{
-            display: block;
-            padding: $space*6 0;
-            color: #000;
-        } 
-    }
-}
 
-.opticalBanner{
-    display: flex;
-}
-
-.opticalMain{
+.sunglassesMain{
     text-align: center;
     margin: $space*20 0;
     @include iphone{
@@ -60,7 +22,7 @@
             margin: 24px 0 40px;
         }
         li{
-            width: 23%;
+            width: 32%;
             margin-bottom: 80px;
             @include ipad{
                 width: 48%;
@@ -115,6 +77,7 @@
             }
             @include iphone{
                 font-size: 16px;
+                padding: 10px;
             }
         }
         .number{
