--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -16,10 +16,10 @@
 <body>
   <div class="header">
     <div class="headerContent">
-      <h1><a href="#">Glass</a></h1>
+      <h1><a href="index.html">Glass</a></h1>
       <ul class="nav">
         <li><a href="#">系列鏡框</a></li>
-        <li><a href="#">門市據點</a></li>
+        <li><a href="location.html">門市據點</a></li>
         <li><a href="#">部落格</a></li>
         <li><a href="#">常見問題</a></li>
       </ul>
@@ -43,7 +43,7 @@
         <div class="footerTop">
           <div class="footerAside">
             <ul class="menu">
-              <li><a href="#">首頁</a></li>
+              <li><a href="index.html">首頁</a></li>
               <li><a href="#">系列鏡框</a></li>
               <li><a href="#">門市據點</a></li>
               <li><a href="#">部落格</a></li>
