--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -18,10 +18,10 @@
     <div class="headerContent">
       <h1><a href="index.html">Glass</a></h1>
       <ul class="nav">
-        <li><a href="#">系列鏡框</a></li>
+        <li><a href="optical.html">系列鏡框</a></li>
         <li><a href="location.html">門市據點</a></li>
-        <li><a href="#">部落格</a></li>
-        <li><a href="#">常見問題</a></li>
+        <li><a href="blog.html">部落格</a></li>
+        <li><a href="question.html">常見問題</a></li>
       </ul>
     </div>
   </div>
@@ -30,10 +30,10 @@
     <i class="fa fa-bars" aria-hidden="true"></i>
   </div>
   <ul class="dropMenu">
-    <li><a href="#">系列鏡框</a></li>
-        <li><a href="#">門市據點</a></li>
-        <li><a href="#">部落格</a></li>
-        <li><a href="#">常見問題</a></li>
+    <li><a href="optical.html">系列鏡框</a></li>
+        <li><a href="location.html">門市據點</a></li>
+        <li><a href="blog.html">部落格</a></li>
+        <li><a href="question.html">常見問題</a></li>
   </ul>
 
   <%- contents %>
@@ -44,10 +44,10 @@
           <div class="footerAside">
             <ul class="menu">
               <li><a href="index.html">首頁</a></li>
-              <li><a href="#">系列鏡框</a></li>
-              <li><a href="#">門市據點</a></li>
-              <li><a href="#">部落格</a></li>
-              <li><a href="#">常見問題</a></li>
+              <li><a href="optical.html">系列鏡框</a></li>
+              <li><a href="location.html">門市據點</a></li>
+              <li><a href="blog.html">部落格</a></li>
+              <li><a href="question.html">常見問題</a></li>
             </ul>
     
             <ul class="footerMedium">
