--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -136,7 +136,7 @@ a {
 .hamburger {
   display: none;
   position: absolute;
-  top: 25px;
+  top: 20px;
   right: 5%;
   font-size: 40px;
   color: #fff;
@@ -1273,8 +1273,37 @@ a {
   margin-bottom: 32px;
 }
 
+.blogMenu {
+  background-color: #650300;
+}
+@media (max-width: 767px) {
+  .blogMenu {
+    display: none;
+  }
+}
+.blogMenu .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.blogMenu .container i {
+  font-size: 30px;
+  color: #fff;
+}
+.blogMenu .blogNav {
+  display: flex;
+  margin: 0 -24px;
+}
+.blogMenu .blogNav a {
+  font-size: 20px;
+  font-weight: 700;
+  padding: 12px 24px;
+  color: #fff;
+}
+
 .blogMain {
   margin: 96px 0 80px;
+  margin-bottom: 124px;
 }
 @media (max-width: 992px) {
   .blogMain {
@@ -1299,14 +1328,46 @@ a {
     margin-bottom: 24px;
   }
 }
+@media (max-width: 992px) {
+  .blogMain {
+    margin-bottom: 80px;
+  }
+}
+@media (max-width: 767px) {
+  .blogMain {
+    margin-bottom: 64px;
+  }
+}
+@media (max-width: 992px) {
+  .blogMain h2 {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .blogMain h2 {
+    margin-bottom: 24px;
+  }
+}
 
 .project > li {
   display: flex;
-  margin: 0 -12px;
+  flex-wrap: wrap;
+  margin: 0 -12px 60px;
+}
+@media (max-width: 992px) {
+  .project > li {
+    margin-bottom: 24px;
+  }
 }
 .project > li img {
   width: 50%;
   padding: 0 12px;
+}
+@media (max-width: 767px) {
+  .project > li img {
+    width: 100%;
+    margin-bottom: 8px;
+  }
 }
 .project > li .read {
   width: 50%;
@@ -1314,13 +1375,50 @@ a {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 767px) {
+  .project > li .read {
+    width: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .project > li .read > p {
+    display: none;
+  }
+}
 .project > li h3 {
   font-size: 32px;
   color: #AA0601;
 }
+@media (max-width: 992px) {
+  .project > li h3 {
+    font-size: 24px;
+  }
+}
 .project > li p {
   font-size: 20px;
   margin-bottom: 102px;
+}
+@media (max-width: 992px) {
+  .project > li p {
+    font-size: 16px;
+    margin-bottom: 0;
+  }
+}
+.project > li p .notShow {
+  display: inline;
+}
+@media (max-width: 992px) {
+  .project > li p .notShow {
+    display: none;
+  }
+}
+.project > li p span {
+  display: none;
+}
+@media (max-width: 992px) {
+  .project > li p span {
+    display: inline;
+  }
 }
 .project > li a {
   font-size: 36px;
@@ -1329,19 +1427,331 @@ a {
   color: #AA0601;
   align-self: flex-end;
 }
+@media (max-width: 992px) {
+  .project > li a {
+    display: none;
+  }
+}
 .project .s-title {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 16px;
 }
+@media (max-width: 992px) {
+  .project .s-title {
+    margin-bottom: 4px;
+  }
+}
 .project .s-title h4 {
   font-size: 20px;
   font-weight: 500;
 }
+@media (max-width: 992px) {
+  .project .s-title h4 {
+    font-size: 16px;
+  }
+}
 .project .s-title p {
   font-size: 16px;
   font-weight: 500;
+  margin-bottom: 0;
+}
+
+.page {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 80px;
+}
+.page .next {
+  padding: 11px 12px;
+  font-size: 19px;
+  color: #555555;
+  border: 1px solid #555555;
+}
+.page .next:hover {
+  background-color: #000;
+  color: #fff;
+}
+@media (max-width: 767px) {
+  .page .next {
+    font-size: 16px;
+    padding: 10px;
+  }
+}
+.page .number {
+  padding: 12px 15px;
+  font-size: 18px;
+  color: #555555;
+  border: 1px solid #555555;
+}
+.page .number:hover {
+  background-color: #000;
+  color: #fff;
+}
+@media (max-width: 767px) {
+  .page .number {
+    font-size: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .page {
+    margin-bottom: 64px;
+  }
+}
+
+.blogMenu {
+  background-color: #650300;
+}
+@media (max-width: 767px) {
+  .blogMenu {
+    display: none;
+  }
+}
+.blogMenu .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.blogMenu .container i {
+  font-size: 30px;
+  color: #fff;
+}
+.blogMenu .blogNav {
+  display: flex;
+  margin: 0 -24px;
+}
+.blogMenu .blogNav a {
+  font-size: 20px;
+  font-weight: 700;
+  padding: 12px 24px;
+  color: #fff;
+}
+
+.bread {
+  margin: 24px 0 8px;
+}
+@media (max-width: 992px) {
+  .bread {
+    margin-top: 8px;
+  }
+}
+@media (max-width: 767px) {
+  .bread {
+    margin-top: 16px;
+  }
+}
+.bread span {
+  color: #AA0601;
+}
+
+.hash {
+  display: flex;
+}
+.hash li {
+  margin-right: 15px;
+  font-size: 24px;
+  font-weight: 700;
+  color: #AA0601;
+}
+@media (max-width: 767px) {
+  .hash li {
+    font-size: 16px;
+  }
+}
+
+.specialContainer {
+  display: flex;
+  margin: 0 -12px;
+}
+
+.specialMain {
+  margin: 96px 0 80px;
+  width: 66.66%;
+  padding: 0 12px;
+  margin-top: 8px;
+  margin-bottom: 80px;
+}
+@media (max-width: 992px) {
+  .specialMain {
+    margin: 80px 0 56px;
+  }
+}
+@media (max-width: 767px) {
+  .specialMain {
+    margin: 40px 0 64px;
+  }
+}
+.specialMain h2 {
+  font-size: 48px;
+  font-weight: 700;
+  padding-left: 16px;
+  margin-bottom: 32px;
+  border-left: 8px solid #9F1213;
+}
+@media (max-width: 767px) {
+  .specialMain h2 {
+    font-size: 24px;
+    margin-bottom: 24px;
+  }
+}
+@media (max-width: 992px) {
+  .specialMain {
+    width: 75%;
+    margin-top: 8px;
+    margin-bottom: 80px;
+  }
+}
+@media (max-width: 767px) {
+  .specialMain {
+    width: 100%;
+    margin-bottom: 48px;
+  }
+}
+.specialMain h2 {
+  margin-bottom: 0;
+  padding-left: 0;
+  border-left: 0;
+}
+@media (max-width: 767px) {
+  .specialMain h2 {
+    font-weight: 400;
+  }
+}
+.specialMain h3 {
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+@media (max-width: 992px) {
+  .specialMain h3 {
+    margin-bottom: 24px;
+  }
+}
+@media (max-width: 767px) {
+  .specialMain h3 {
+    font-size: 16px;
+    margin-bottom: 16px;
+  }
+}
+
+.specialPart {
+  color: #555555;
+}
+.specialPart p {
+  margin: 8px 0 40px;
+}
+@media (max-width: 992px) {
+  .specialPart p {
+    margin: 16px 0 24px;
+  }
+}
+@media (max-width: 767px) {
+  .specialPart p {
+    margin: 8px 0 16px;
+  }
+}
+
+.share {
+  display: flex;
+  padding-bottom: 16px;
+  margin-bottom: 24px;
+  border-bottom: 1px solid #707070;
+}
+@media (max-width: 992px) {
+  .share {
+    margin-top: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .share {
+    display: none;
+  }
+}
+.share h4, .share li {
+  font-weight: 500;
+  margin-right: 16px;
+}
+.share img {
+  width: 24px;
+  height: 24px;
+}
+
+.specialPage {
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 767px) {
+  .specialPage {
+    display: none;
+  }
+}
+.specialPage a {
+  color: #000;
+}
+.specialPage a:hover {
+  color: #650300;
+}
+.specialPage .pre {
+  display: flex;
+}
+.specialPage .pre span {
+  margin-right: 12px;
+}
+.specialPage .next {
+  display: flex;
+}
+.specialPage .next p {
+  margin-right: 12px;
+}
+
+.tag {
+  width: 23%;
+  padding: 0 12px;
+  margin-top: 8px;
+}
+@media (max-width: 767px) {
+  .tag {
+    display: none;
+  }
+}
+.tag h3, .tag span {
+  font-size: 32px;
+  font-weight: 700;
+  color: #AA0601;
+  margin-bottom: 4px;
+}
+@media (max-width: 992px) {
+  .tag h3, .tag span {
+    font-size: 16px;
+  }
+}
+.tag span {
+  margin-right: 12px;
+  vertical-align: middle;
+}
+
+.hashTag {
+  display: flex;
+  flex-wrap: wrap;
+}
+.hashTag li {
+  margin: 0 24px 4px 0;
+}
+@media (max-width: 992px) {
+  .hashTag li {
+    margin-right: 16px;
+  }
+}
+.hashTag a {
+  font-size: 24px;
+  font-weight: 700;
+  color: #AA0601;
+}
+@media (max-width: 992px) {
+  .hashTag a {
+    font-size: 16px;
+  }
 }
 
 * {
