--- a/app/assets/style/_layout.scss
+++ b/app/assets/style/_layout.scss
@@ -32,6 +32,9 @@
         color: #fff;
         font: normal normal normal 20px/30px Source Han Sans TW;
         padding: 5% 0;
+        &:hover{
+          opacity: 0.5;
+        }
         }
     }
     }
