--- a/app/assets/style/all.css
+++ b/app/assets/style/all.css
@@ -132,6 +132,9 @@ a {
   font: normal normal normal 20px/30px Source Han Sans TW;
   padding: 5% 0;
 }
+.header .headerContent .nav a:hover {
+  opacity: 0.5;
+}
 
 .hamburger {
   display: none;
@@ -747,6 +750,10 @@ a {
   width: 33.33%;
   font-size: 32px;
   font-weight: 500;
+  border-right: 1px solid #DCDCDC;
+}
+.topNav li:first-child {
+  border-left: 1px solid #DCDCDC;
 }
 @media (max-width: 992px) {
   .topNav li {
@@ -764,6 +771,10 @@ a {
   display: block;
   padding: 24px 0;
   color: #000;
+  z-index: 5;
+}
+.topNav li a:hover {
+  border-bottom: 8px solid #AA0601;
 }
 
 .opticalBanner {
@@ -1752,8 +1763,4 @@ a {
   .hashTag a {
     font-size: 16px;
   }
-}
-
-* {
-  outline: 1px solid black;
 }/*# sourceMappingURL=all.css.map */
